--- a/TopSoft.ExcelExport/TopSoft.ExcelExport.csproj
+++ b/TopSoft.ExcelExport/TopSoft.ExcelExport.csproj
@@ -37,19 +37,18 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\CellBorderAttribute.cs" />
     <Compile Include="Attributes\CellDataAttribute.cs" />
+    <Compile Include="Attributes\CellFillAttribute.cs" />
+    <Compile Include="Attributes\CellTextAttribute.cs" />
+    <Compile Include="Entity\ExcelCell.cs" />
     <Compile Include="Entity\ExcelRow.cs" />
     <Compile Include="Entity\RowData.cs" />
     <Compile Include="ExportContext.cs" />
     <Compile Include="Helpers\ExcelHelper.cs" />
+    <Compile Include="Helpers\AttrStylesHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
