--- a/TopSoft.ExcelExport/TopSoft.ExcelExport.csproj
+++ b/TopSoft.ExcelExport/TopSoft.ExcelExport.csproj
@@ -48,8 +48,11 @@
     <Compile Include="Entity\RowData.cs" />
     <Compile Include="ExportContext.cs" />
     <Compile Include="Helpers\ExcelHelper.cs" />
-    <Compile Include="Helpers\AttrStylesHelper.cs" />
+    <Compile Include="Helpers\StylesHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Styles\CellBorder.cs" />
+    <Compile Include="Styles\CellFill.cs" />
+    <Compile Include="Styles\CellText.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
